fix(UI): fixed horizontal scroll issue.

--- a/helper-frontend/src/components/WebSocket/WebSocket.css
+++ b/helper-frontend/src/components/WebSocket/WebSocket.css
@@ -51,7 +51,7 @@
 /* Chat Box */
 .chat-box {
     width: 90%;
-    min-height: 90vh;
+    min-height: 80vh;
     max-width: 60rem;
     padding: 1rem;
     display: flex;
